Sun Jul  5 20:40:35 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (float_arg): returns PI for -0.0.

Sun Jul  5 14:04:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_threadptr_exec_event_hooks): new function to
	  execute event hooks, with preserving errinfo.  [ruby-core:24118]

Sun Jul  5 08:14:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (rb_add_method, remove_method, rb_undef): fixed
	  minor grammatical errors in warnings.  a patch from Run Pain
	  Run Run at [ruby-core:24141].

	* vm_method.c (Init_eval_method): registers notimplement_body as a
	  mark-object.

	* vm_insnhelper.c (vm_yield_setup_block_args): restores the firs
	  arg where is overwritten at funcall.  [ruby-core:24139]

Sat Jul  4 08:20:03 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (dbl2ival): should raise FloatDomainError on Infinity
	  and NaN as 1.8 does.  [ruby-dev:38726]

Fri Jul  3 22:48:45 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (find_time_t): less number of guesses for hh:mm:60.

Fri Jul  3 21:30:14 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_equal_p): removed.

Fri Jul  3 21:07:29 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c: renamed equal_p to eqeq_p.

	* complex.c: ditto.

	* complex.c (nucomp_equal_p): added.
	  Complex(NaN).equal?(Complex(NaN)) should return true.

Fri Jul  3 19:48:40 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: undef-ed shome methods.  [ruby-core:24110]

	* complex.c (Numeric#arg): NaN for NaN.  [ruby-core:24116]

Fri Jul  3 18:35:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (struct rb_iseq_struct): fixed types.

	* vm_core.h (ic_vmstat): VM state version is VALUE.

Fri Jul  3 02:52:20 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (find_time_t): time guess strategy refined again.

Fri Jul  3 00:36:16 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (find_time_t): time guess strategy refined.
